--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,11 @@
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
+		"cors": "^2.8.5",
 		"dotenv": "^17.2.0",
 		"express": "^5.1.0",
-		"pg": "^8.16.3"
+		"pg": "^8.16.3",
+		"postgres": "^3.4.7"
 	},
 	"type": "module"
 }
